kubernetes/smartoffers-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: smartoffers-frontend-deployment
  labels:
    app: smartoffers-frontend
spec:
  template:
    metadata:
      labels:
        app: smartoffers-frontend
        env: prod
        tier: web
    spec:
      imagePullSecrets:
      - name: $OCIR_SECRET_NAME
      containers:
      - name: smartoffers-frontend
        image: $PRIVATE_REGISTRY_PATH/$TENANCY_NAME/$REPO_NAME/$APP_NAME:${WERCKER_GIT_BRANCH}-${WERCKER_GIT_COMMIT}
        imagePullPolicy: Always
        ports:
        - containerPort: 8182

---

apiVersion: v1
kind: Service
metadata:
  name: smartoffers-frontend-svc
  labels:
    app: smartoffers-frontend
spec:
  selector:
    app: smartoffers-frontend
    tier: web
    env: prod
  ports:
  - port: 8182
    targetPort: 8119
