kubernetes/smarrtoffers-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smartoffers-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: smartoffers-frontend-svc
          servicePort: 8182
